Correct the alignment of the cards

--- a/SASS/Base/_general.scss
+++ b/SASS/Base/_general.scss
@@ -20,10 +20,7 @@ body {
 }
 
 main {
-  max-width: 1440px;
-  width: 100%;
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
 }
