--- a/SASS/Layout/_main.scss
+++ b/SASS/Layout/_main.scss
@@ -46,6 +46,10 @@ section.title {
   width: 100%;
   padding: 30px;
 
+  @media screen and (min-width: 768px) {
+    max-width: 1053px;
+  }
+
   .filter-title {
     width: 100%;
   }
@@ -78,7 +82,7 @@ section.title {
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
 
       @media screen and (min-width: 768px) {
-        width: 335px;
+        width: 323px;
         height: 72px;
       }
 
@@ -164,6 +168,13 @@ section.title {
   .restaurants-title {
     font-family: $font-secondary;
     margin: 37px 0 14px 3px;
+
+    @media screen and (min-width: 768px) {
+      width: 1080px;
+      margin: auto;
+      margin-top: 20px;
+      margin-bottom: 20px;
+    }
   }
 
   .restaurants-card {
@@ -175,8 +186,15 @@ section.title {
     margin-bottom: 49px;
 
     @media screen and (min-width: 768px) {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      gap: 50px 100px;
+      width: 1080px;
+      margin: auto;
+      margin-bottom: 50px;
     }
 
     .card-container {
@@ -184,6 +202,11 @@ section.title {
       width: 100%;
       height: 251px;
       position: relative;
+
+      @media screen and (min-width: 768px) {
+        padding: 0;
+        width: 490px;
+      }
 
       .new-label {
         position: absolute;
@@ -221,6 +244,7 @@ section.title {
     border-radius: 0 0 15px 15px;
     padding-left: 13px;
     position: relative;
+    margin-top: -3px;
 
     h3 {
       font-family: $font-secondary;
@@ -247,8 +271,8 @@ section.title {
         display: none;
 
         &:checked + .heart-shape svg {
-          fill: url(#heart-gradient);
-          stroke: url(#heart-gradient);
+          fill: url(#heart-gradient-1);
+          stroke: url(#heart-gradient-1);
         }
       }
 
